<resources>
    <string name="app_name">MVVM Application</string>
    <string name="tv_shows_most_popular">Tv Shows | Most Popular</string>
    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>
    <string name="dot">•</string>
    <string name="website">Website</string>
    <string name="episodes">Episodes</string>
    <string name="add_to_watchlist">Add to watchlist</string>
    <string name="watchlist">WatchList</string>
    <string name="search_tv_show">Search Tv Show</string>
</resources>